Second Day Praparations

--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -16,6 +16,7 @@ $hover-dark-theme: #EAC645;
 
 $gradient: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4F2EE8 18.03%, #FFFFFF 100%);
 $shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
+$icons-shadow: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 
 // breakpoints
 $phoneMax: 374.9px;
