--- a/src/sass/base/_resets.scss
+++ b/src/sass/base/_resets.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: DM Sans, sans-serif;
+    font-family: 'DM Sans', sans-serif;
     margin: 0 auto;
     max-width: 1440px;
     padding: 0;
