Side Bar Markup

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,7 +11,7 @@
 @import './components/container'
 
 // Multipage styles
-// @import './layout/header';
+// @import './layouts/header';
 
 // Index-Page styles
 // @import './layout/
