--- a/src/partials/index/side-bar/side-bar.html
+++ b/src/partials/index/side-bar/side-bar.html
@@ -1,6 +1,6 @@
 <aside>
   <!-- Category Button Set (Sergiy Panov)-->
-  <include src="../side-bar/category-set.html"></include>
+  <include src="category-set.html"></include>
   <!-- SLIDER (Olha Tverdokhlib)-->
-  <include src="../side-bar//slider.html"></include>
+  <include src="slider.html"></include>
 </aside>
