--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -20,6 +20,8 @@
 // @import './layout/
 
 // Modal styles
+@import './layouts/modal/modals';
 @import './layouts/modal/form';
 @import './layouts/modal/register-modal';
 @import './layouts/modal/login-modal';
+@import './layouts/modal/about-book-modal'
