--- a/src/partials/modals/about-book-modal.html
+++ b/src/partials/modals/about-book-modal.html
@@ -1,17 +1,16 @@
-  
-   <!-- Кнопка для імітації кліку -->
-   
-   <button id="openModalBtn" type="button" >Приклад</button>
-   <button type="button" class="storage-button">aaa</button>
-    <div class="modal is-hidden about-book-modal">
-        <button class="close-modal-btn" type="button">
-            <img
-              width="24"
-              height="24"
-              src="/src/images/png-icons/modal/close-white-icon.png"
-              alt="close-icon"
-            />
-          </button>
-         
-    </div>
-    
+<!-- Кнопка для імітації кліку -->
+
+<button id="openModalBtn" type="button">Приклад</button>
+<button type="button" class="storage-button">Add to Storage</button>
+<button type="button" class="storage-delete-button">Delete from Storage</button>
+<div class="modal is-hidden about-book-modal">
+  <button class="close-modal-btn" type="button">
+    <img
+      width="24"
+      height="24"
+      src="/src/images/png-icons/modal/close-white-icon.png"
+      alt="close-icon"
+    />
+  </button>
+  <p class="storage-description"></p>
+</div>
