--- a/src/sass/base/_resets.scss
+++ b/src/sass/base/_resets.scss
@@ -3,10 +3,8 @@ body {
     margin: 0 auto;
     max-width: 1440px;
     padding: 0;
+    background-color: $main-background;
 
-    // &.modal-open {
-    //     overflow: hidden;
-    // }
 }
 
 a {
