style-import-options

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,7 @@
 
 // Base styles
 @import './base/resets';
+@import './base/pagination.scss';
 
 // Components styles
 @import './components/container';
