--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -24,4 +24,7 @@
 @import './layouts/modal/form';
 @import './layouts/modal/register-modal';
 @import './layouts/modal/login-modal';
-@import './layouts/modal/about-book-modal'
+@import './layouts/modal/about-book-modal';
+
+// Category list
+@import './layouts/modal/category-set';
