Category-Set-Afterfix

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,7 +14,7 @@
 // @import './layouts/header';
 
 // Index-Page styles
-// @import './layout/
+@import './layouts/category-set'
 
 // Shop-List styles
 // @import './layout/
@@ -26,5 +26,4 @@
 @import './layouts/modal/login-modal';
 @import './layouts/modal/about-book-modal';
 
-// Category list
-@import './layouts/modal/category-set';
+
