--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,7 +14,7 @@
 // @import './layouts/header';
 
 // Index-Page styles
-@import './layouts/category-set'
+@import './layouts/category-set';
 
 // Shop-List styles
 // @import './layout/
