slider without nav button

--- a/src/partials/index/side-bar/side-bar.html
+++ b/src/partials/index/side-bar/side-bar.html
@@ -2,5 +2,7 @@
   <!-- Category Button Set (Sergiy Panov)-->
   <!-- <include src="./category-set.html"></include> -->
   <!-- SLIDER (Olha Tverdokhlib)-->
-  <!-- <include src="./slider.html"></include> -->
+
+   <!-- <include src="../side-bar/slider.html"></include> -->
+   <include src="./partials/index/side-bar/slider.html"></include>
 </aside>
