--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,7 +8,8 @@
 @import './base/resets';
 
 // Components styles
-@import './components/container'
+@import './components/container';
+@import './components/slider';
 
 // Multipage styles
 // @import './layouts/header';
