--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,11 +8,11 @@
 @import './base/resets';
 
 // Components styles
-@import './components/container'
+@import './components/container';
 
 // Multipage styles
-// @import './layouts/header';
 
+@import './layout/header';
 // Index-Page styles
 // @import './layout/
 
