Fire-Base-Modals

--- a/src/partials/modals/about-book-modal.html
+++ b/src/partials/modals/about-book-modal.html
@@ -4,7 +4,7 @@
 <button type="button" class="storage-button">Add to Storage</button>
 <button type="button" class="storage-delete-button">Delete from Storage</button>
 <div class="modal is-hidden about-book-modal">
-  <button class="close-modal-btn" type="button">
+  <button id="modal-close" class="close-modal-btn" type="button">
     <img
       width="24"
       height="24"
