--- a/src/partials/modals/register-modal.html
+++ b/src/partials/modals/register-modal.html
@@ -1,20 +1,29 @@
-<div class="modal register-modal">
-  <button class="close-modal-btn" type="button">
+<button id="openModalBtn" type="button">Приклад</button>
+<div class="modal is-hidden register-modal">
+  <button id="modal-close" class="close-modalBtn" type="button">
     <img
-      width="28"
-      height="28"
+      width="20"
+      height="20"
       src="/src/images/png-icons/modal/close-white-icon.png"
       alt="close-icon"
     />
   </button>
 
   <form class="register-form" id="formId">
-    <input class="modal-input" type="text" placeholder="Name" id="nameId" />
+    <label class="modal-label" for="nameId">
+      <input
+        class="modal-input"
+        type="text"
+        placeholder="Name"
+        id="nameId"
+        required
+      />
+    </label>
     <label class="modal-label" for="emailId">
       <img
         class="modal-icon"
-        width="28"
-        height="28"
+        width="20"
+        height="20"
         src="/src/images/png-icons/modal/mail-white-icon.png"
         alt="mail-icon"
       />
@@ -23,13 +32,14 @@
         type="email"
         placeholder="Email"
         id="emailId"
+        required
       />
     </label>
     <label class="modal-label" for="passwordId">
       <img
         class="modal-icon"
-        width="28"
-        height="28"
+        width="20"
+        height="20"
         src="/src/images/png-icons/modal/lock-white-icon.png"
         alt="lock-icon"
       />
@@ -38,10 +48,13 @@
         type="password"
         placeholder="Password"
         id="passwordId"
+        required
       />
     </label>
-    <button type="submit">Sign Up</button>
+    <button class="main-modal-btn" type="submit">Sign Up</button>
   </form>
-  <button class="current-modal">Sign Up</button>
-  <button>Sign In</button>
+  <div class="common-modalBtn-field">
+    <button class="common-modal-btn current-modal-btn">Sign Up</button>
+    <button class="common-modal-btn">Sign In</button>
+  </div>
 </div>
