--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -4,7 +4,7 @@ $secondary-colour: #FFFFFF;
 $main-brand-colour: #4F2EE8;
 $additional-brand-colour: #EAC645;
 
-$main-background: #B4AFAF;
+$main-background: #F6F6F6;
 $light-theme-background: #FFFFFF;
 $dark-theme-background: #111111;
 
