--- a/src/sass/layouts/modal/_modals.scss
+++ b/src/sass/layouts/modal/_modals.scss
@@ -24,12 +24,7 @@
 
   z-index: 2;
 
-  // background-color: $main-brand-colour;
   overflow: auto; 
-
-  // visibility: hidden;
-  // opacity: 0;
-  // pointer-events: none;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -41,14 +36,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  // background-color: $dark-theme-background;
-  // opacity: 0;
-  // visibility: hidden;
   
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &.is-hidden{ opacity: 0;
-      pointer-events: none;
-  visibility: hidden;}
+
+  &.is-hidden{ 
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
 }
