--- a/src/partials/modals/about-book-modal.html
+++ b/src/partials/modals/about-book-modal.html
@@ -1,16 +1,20 @@
 <!-- Кнопка для імітації кліку -->
 
 <button id="openModalBtn" type="button">Приклад</button>
-<button type="button" class="storage-button">Add to Storage</button>
+
 <button type="button" class="storage-delete-button">Delete from Storage</button>
 <div class="modal is-hidden about-book-modal">
   <button class="close-modal-btn" type="button">
     <img
       width="24"
       height="24"
-      src="/src/images/png-icons/modal/close-white-icon.png"
+      src="/src/images/png-icons/modal/close-icon.png"
       alt="close-icon"
     />
   </button>
+  <div class="storage-button-wrapper"><button type="button" class="storage-button">Add to shopping list</button></div>
+  
   <p class="storage-description"></p>
 </div>
+
+
