--- a/src/sass/layouts/_category-set.scss
+++ b/src/sass/layouts/_category-set.scss
@@ -86,6 +86,7 @@
 }
 
 .category-title {
+  margin-top: 40px;
   max-width: 320px;
   margin-bottom: 40px;
   font-size: 32px;
@@ -96,6 +97,9 @@
     font-size: 48px;
     line-height: 1.08;
     max-width: 704px;
+  }
+  @media screen and (min-width: $desktopMin) {
+    max-width: 996px;
   }
 }
 
@@ -172,11 +176,6 @@
   }
 }
 
-// .category-some {
-//   @media screen and (min-width: $tabletMin) {
-//   }
-// }
-
 .aside-flex {
   display: block;
   @media screen and (min-width: $desktopMin) {
@@ -184,3 +183,5 @@
     gap: 40px;
   }
 }
+
+// POP
