--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -1,5 +1,6 @@
 $primary-colour: #111111; 
 $secondary-colour: #FFFFFF;
+$paragraph-colour: #B4AFAF;
 
 $main-brand-colour: #4F2EE8;
 $additional-brand-colour: #EAC645;
