--- a/src/sass/layouts/modal/_about-book-modal.scss
+++ b/src/sass/layouts/modal/_about-book-modal.scss
@@ -69,7 +69,18 @@
   width: 100%;
   text-align: center;
 }
-.storage-button {
+.add-storage-button {
+  border: 2px solid #4f2ee8;
+  border-radius: 40px;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  padding: 14px 23px;
+  margin-top: 40px;
+}
+.remove-modal-btn{
+  display: none;
   border: 2px solid #4f2ee8;
   border-radius: 40px;
   font-weight: 700;
