--- a/src/sass/layouts/modal/_modals.scss
+++ b/src/sass/layouts/modal/_modals.scss
@@ -28,6 +28,10 @@
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.is-hidden{
+    z-index: -2;
+  }
 }
 
 .modal {
@@ -36,11 +40,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 2;
   
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.is-hidden{ 
+    z-index: -2;
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
