--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -5,7 +5,7 @@ $paragraph-colour: #B4AFAF;
 $main-brand-colour: #4f2ee8;
 $additional-brand-colour: #eac645;
 
-$main-background: #b4afaf;
+$main-background: #F6F6F6;
 $light-theme-background: #ffffff;
 $dark-theme-background: #111111;
 
