--- a/src/sass/layouts/_category-set.scss
+++ b/src/sass/layouts/_category-set.scss
@@ -1,4 +1,3 @@
-// тестовий блок Ольги
 .aside-container {
   display: flex;
   flex-direction: column;
@@ -13,15 +12,6 @@
     flex-direction: column;
     gap: 86px;
     margin-bottom: 0;
-  }
-}
-.Olha__block {
-  background-color: purple;
-  height: 352px;
-  width: 335px;
-
-  @media screen and (min-width: $tabletMin) {
-    height: 472px;
   }
 }
 
@@ -132,6 +122,9 @@
     letter-spacing: -0.04em;
     text-transform: uppercase;
     color: $primary-colour;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 
     @media screen and (min-width: $tabletMin) {
       max-width: 218px;
@@ -142,10 +135,13 @@
   }
 
   p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
     font-size: 12px;
     line-height: 1.16;
     font-style: italic;
-    color: $main-background;
+    color: $paragraph-colour;
     @media screen and (min-width: $tabletMin) {
       max-width: 218px;
     }
@@ -156,6 +152,9 @@
 
   &:last-child {
     margin-bottom: 0px;
+    // @media screen and (min-width: $tabletMin) {
+    //   margin-bottom: 80px;
+    // }
   }
 }
 
@@ -185,3 +184,46 @@
 }
 
 // POP
+.book {
+  position: relative;
+}
+
+.book-popup {
+  position: absolute;
+  bottom: 55px;
+  height: 70px;
+  width: 335px;
+  display: none;
+  background-color: $hover-dark-theme;
+  color: $primary-colour;
+  padding: 26px 52px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: -0.04em;
+  border-radius: 0px 0px 8px 8px;
+
+  transform: translateY(-100%);
+  transition: transform 250ms;
+
+  @media screen and (min-width: $tabletMin) {
+    width: 218px;
+  }
+  @media screen and (min-width: $desktopMin) {
+    width: 180px;
+  }
+}
+
+.book:last-child .book-popup {
+  @media screen and (min-width: $tabletMin) {
+    bottom: 95px;
+  }
+}
+
+.book:hover .book-popup {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
