--- a/src/partials/index/main-section/section.html
+++ b/src/partials/index/main-section/section.html
@@ -1,3 +1,6 @@
 <section>
-  <div class="container"></div>
+  <div class="container">
+    <ul class="categorie-list"></ul>
+  </div>
+  <script src="./js/fetchbooks/main-section.js" type="module"></script>
 </section>
