--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 
 // Components styles
 @import './components/container';
+@import './components/books-list';
 
 // Multipage styles
 // @import './layouts/header';
