Header File-Fix

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,8 +12,8 @@
 @import './components/container';
 
 // Multipage styles
+@import './layouts/header';
 
-@import './layout/header';
 // Index-Page styles
 @import './layouts/category-set';
 
