--- a/src/sass/layouts/_category-set.scss
+++ b/src/sass/layouts/_category-set.scss
@@ -99,6 +99,7 @@
 }
 
 .book {
+  cursor: pointer;
   margin-bottom: 40px;
   position: relative;
 
@@ -159,6 +160,7 @@
   &:last-child {
     margin-bottom: 0px;
   }
+
 }
 
 .category__books {
@@ -191,7 +193,8 @@
   bottom: 55px;
   height: 70px;
   width: 335px;
-  display: none;
+  opacity: 0;
+  visibility: hidden;
   background-color: $hover-dark-theme;
   color: $primary-colour;
   padding: 26px 52px;
@@ -204,7 +207,8 @@
   border-radius: 0px 0px 8px 8px;
 
   transform: translateY(-100%);
-  transition: transform 250ms;
+  transition: transform 2s $cubic;
+  
 
   @media screen and (min-width: $tabletMin) {
     width: 218px;
@@ -221,7 +225,7 @@
 }
 
 .book:hover .book-popup {
-  display: block;
+  visibility: visible;
   opacity: 1;
   transform: translateY(0);
 }
