--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,7 @@
 // Components styles
 @import './components/container';
 @import './components/books-list';
+@import './components/slider';
 
 // Multipage styles
 @import './layouts/header';
