--- a/src/partials/index/main-section/section.html
+++ b/src/partials/index/main-section/section.html
@@ -2,5 +2,5 @@
   <div class="container">
     <ul class="categorie-list"></ul>
   </div>
-  <script src="./js/fetchbooks/main-section.js" type="module"></script>
+  <!-- <script src="./js/fetchbooks/main-section.js" type="module"></script> -->
 </section>
