--- a/src/sass/layouts/modal/_modals.scss
+++ b/src/sass/layouts/modal/_modals.scss
@@ -7,45 +7,41 @@
 //     width: 100%;
 //     height: 100%;
 //      }
-  
-  
+
 //   .is-hidden {
 //     opacity: 0;
 //     pointer-events: none;
 //   }
-  
-  
+
 .js-backdrop-modal {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-
-  z-index: 2;
-
-  overflow: auto; 
-
+  background-color: rgba(17, 17, 17, 0.4);
+  z-index: 3;
+  overflow: auto;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &.is-hidden{
-    z-index: -2;
+  &.is-hidden {
+    display: none;
   }
 }
 
 .modal {
   position: absolute;
-  
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2;
-  
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 4;
 
-  &.is-hidden{ 
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.is-hidden {
     z-index: -2;
     opacity: 0;
     pointer-events: none;
