--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -262,15 +262,14 @@
 
 .slider:before {
   position: absolute;
-  content: '';
+  content: "";
   height: 20px;
   width: 20px;
   left: 18px;
   bottom: 2px;
   // background-color: #fff;
   background: linear-gradient(180deg, #ffffff 0%, #f7f7f7 100%);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), 0px 2px 2px rgba(0, 0, 0, 0.1),
-    1px 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), 0px 2px 2px rgba(0, 0, 0, 0.1), 1px 2px 4px rgba(0, 0, 0, 0.1);
 
   transition: 0.4s;
 }
