--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,55 +1,52 @@
-
-  <header class="header">
+<header class="header">
   <div class="header__container">
     <div class="header__logo">
       <svg class="header__logo-icon" width="24" height="24">
         <use href="/src/images/sprite.svg#icon-logo"></use>
       </svg>
-      <a href="#" class="header__logo-text">Bookshelf</a>
+      <a href="./index.html" class="header__logo-text">Bookshelf</a>
     </div>
     <nav>
-      <ul class="nav ">
+      <ul class="nav">
         <li class="nav__item">
-          <a href="#" class="nav__link">HOME</a>
+          <a href="./index.html" class="nav__link">HOME</a>
         </li>
         <li class="nav__item">
-          <a href="#"  class="nav__link">SHOPPING LIST</a>
+          <a href="./shop-list.html" class="nav__link">SHOPPING LIST</a>
           <svg class="nav__link-icon" width="20" height="20">
             <use href="/src/images/sprite.svg#icon-basket"></use>
           </svg>
         </li>
       </ul>
     </nav>
-     <div class="toggle-switch">
-        <span>
-            <label class="switch">
-                <input id="theme-switch" type="checkbox">
-                <span class="slider round"></span>
-            </label>
-        </span>
+    <div class="toggle-switch">
+      <span>
+        <label class="switch">
+          <input id="theme-switch" type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </span>
     </div>
     <button id="btn-hamburger" class="js-open-menu">
-    <div class="line-1"></div>
-    <div class="line-2"></div>
-    <div class="line-3"></div>
-    <div class="line-4"></div> 
-  </button>
-    
+      <div class="line-1"></div>
+      <div class="line-2"></div>
+      <div class="line-3"></div>
+      <div class="line-4"></div>
+    </button>
   </div>
   <!--Мобільне меню-->
   <div class="menu-container js-menu-container" id="mobile-menu">
     <ul class="mobile-menu">
       <li class="mobile-menu__item">
-        <a href="#" class="mobile-menu__link">HOME</a>
+        <a href="./index.html" class="mobile-menu__link">HOME</a>
       </li>
       <li class="mobile-menu__item">
-        <a href="#" class="mobile-menu__link">SHOPPING LIST</a>
+        <a href="./shop-list.html" class="mobile-menu__link">SHOPPING LIST</a>
         <svg class="mobile-menu__icon" width="20" height="20">
           <use href="/src/images/sprite.svg#icon-basket"></use>
         </svg>
       </li>
-      <div>
     </ul>
+    <img class="mobile-menu__img" src="/src/images/books.png" alt="books" />
   </div>
 </header>
-
