--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,8 @@
 
 // Multipage styles
 @import './layouts/header';
+@import './layouts/dark-theme';
+@import './layouts/mobile-menu';
 
 // Index-Page styles
 @import './layouts/category-set';
@@ -27,5 +29,3 @@
 @import './layouts/modal/register-modal';
 @import './layouts/modal/login-modal';
 @import './layouts/modal/about-book-modal';
-
-
