--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,22 +1,25 @@
 .header {
   position: absolute;
-  z-index: 4;
+  z-index: 800;
   top: 0;
   left: 0;
   width: 100%;
+  height: 64px;
+
+  background-color: $light-theme-background;
+  border: 1.5px solid #111;
+  border-radius: 0px 0px 8px 8px;
 
   @include minW-Tablet {
     position: relative;
+    height: 72px;
   }
 
   &__container {
     padding-left: $paddingPhone;
     padding-right: $paddingPhone;
-    height: 64px;
-    border: 1.5px solid;
-    border-radius: 0px 0px 8px 8px;
+    // height: 64px;
 
-    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -32,6 +35,7 @@
     @include maxW-Dt {
       padding-left: $paddingDt;
       padding-right: $paddingDt;
+      height: 72px;
     }
   }
 
@@ -42,11 +46,10 @@
     margin-left: 24px;
 
     gap: 8px;
-
-    @include maxW-Tablet {
-    }
   }
   &__logo-text {
+    color: $primary-colour;
+
     font-weight: 700;
     font-size: 24px;
     line-height: 1.29;
@@ -74,15 +77,15 @@
     align-items: center;
     padding: 7px 16px;
 
+    color: $primary-colour;
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.29;
     letter-spacing: -0.04em;
-    // color: $primary-colour;
     &:hover,
     &:focus {
       font-weight: 700;
-      // padding: 8px 16px;
       color: $primary-colour;
       fill: $primary-colour;
       background: $hover-dark-theme;
@@ -90,38 +93,9 @@
     }
   }
 
-  // &__link {
-  // }
-
   &__link-icon {
+    fill: $primary-colour;
     margin-left: 8px;
-  }
-}
-
-.menu-container {
-  display: none;
-  position: relative;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  margin: 0px auto;
-
-  background: $gradient;
-
-  overflow-y: scroll;
-
-  transition: $cubic;
-
-  @include minW-Phone {
-  }
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-
-  &.is-open {
-    transform: translateX(0);
   }
 }
 
@@ -172,62 +146,7 @@
   }
 }
 
-////////////// mobile menu ////////////////
-
-.mobile-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 16px;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  &__item {
-    display: flex;
-
-    justify-content: center;
-    align-items: center;
-
-    gap: 4px;
-
-    color: $secondary-colour;
-    fill: $secondary-colour;
-
-    &:hover,
-    &:focus {
-      padding: 8px 16px;
-      color: $primary-colour;
-      fill: $primary-colour;
-      background: $hover-dark-theme;
-      border-radius: 36px;
-    }
-  }
-
-  &__link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
-  }
-}
-
 //////////theme switcher/////////////////
-
-.dark {
-  background-color: $dark-theme-background;
-  color: $light-theme-background;
-  fill: #ffffff;
-}
-
-.light {
-  background-color: $light-theme-background;
-  color: $dark-theme-background;
-}
 
 .toggle-switch {
   display: flex;
@@ -267,7 +186,7 @@
   width: 20px;
   left: 18px;
   bottom: 2px;
-  // background-color: #fff;
+
   background: linear-gradient(180deg, #ffffff 0%, #f7f7f7 100%);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), 0px 2px 2px rgba(0, 0, 0, 0.1),
     1px 2px 4px rgba(0, 0, 0, 0.1);
