--- a/src/sass/layouts/_category-set.scss
+++ b/src/sass/layouts/_category-set.scss
@@ -1,19 +1,42 @@
-.aside-container {
+.side-bar {
   display: flex;
   flex-direction: column;
+  // width: 335px;
+  max-width: 335px;
   gap: 40px;
+  margin-right: 40px;
 
   @media screen and (min-width: $tabletMin) {
-    flex-direction: row;
+    // width: 672px;
+    max-width: 672px;
     gap: 32px;
-    margin-bottom: 100px;
+    flex-direction: row;
+    margin-right: 0;
   }
   @media screen and (min-width: $desktopMin) {
+    // width: 356px;
+    max-width: 356px;
     flex-direction: column;
     gap: 86px;
-    margin-bottom: 0;
   }
 }
+
+// .aside-container {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 40px;
+
+//   @media screen and (min-width: $tabletMin) {
+//     flex-direction: row;
+//     gap: 32px;
+//     margin-bottom: 100px;
+//   }
+//   @media screen and (min-width: $desktopMin) {
+//     flex-direction: column;
+//     gap: 86px;
+//     margin-bottom: 0;
+//   }
+// }
 
 .category {
   height: 228px;
@@ -61,7 +84,6 @@
   }
 }
 
-
 // scroll
 
 ::-webkit-scrollbar {
@@ -78,20 +100,24 @@
 }
 
 .category-title {
-  margin-top: 40px;
+  // margin-top: 40px;
   max-width: 320px;
   margin-bottom: 40px;
   font-size: 32px;
   line-height: 1.18;
   letter-spacing: -0.04em;
+  margin-top: 40px;
 
   @media screen and (min-width: $tabletMin) {
     font-size: 48px;
     line-height: 1.08;
     max-width: 704px;
+    margin-top: 100px;
+    margin-right: 0;
   }
   @media screen and (min-width: $desktopMin) {
     max-width: 996px;
+    margin-top: 0px;
   }
 }
 
@@ -99,7 +125,7 @@
   color: #4f2ee8;
 }
 
-.book {
+.books {
   cursor: pointer;
   margin-bottom: 40px;
   position: relative;
@@ -109,7 +135,6 @@
     border-radius: 8px;
     min-width: 335px;
     margin-bottom: 14px;
-    
 
     @media screen and (min-width: $tabletMin) {
       min-width: 218px;
@@ -162,7 +187,6 @@
   &:last-child {
     margin-bottom: 0px;
   }
-
 }
 
 .category__books {
@@ -170,13 +194,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 25px;
-    width: 704px;
+    // gap: 25px;
+    // width: 704px;
+    max-width: 704px;
     flex-wrap: wrap;
   }
   @media screen and (min-width: $desktopMin) {
-    width: 996px;
-    gap: 24px;
+    // width: 996px;
+    max-width: 996px;
+    // gap: 24px;
   }
 }
 
@@ -185,7 +211,6 @@
   @media screen and (min-width: $desktopMin) {
     display: flex;
     gap: 40px;
-
   }
 }
 
@@ -209,11 +234,8 @@
   letter-spacing: -0.04em;
   border-radius: 0px 0px 8px 8px;
 
-  
   transform: translateY(100%);
   transition: opacity 1s $cubic;
-
-  
 
   @media screen and (min-width: $tabletMin) {
     width: 218px;
@@ -223,14 +245,28 @@
   }
 }
 
-.book:last-child .book-popup {
+.books:last-child .book-popup {
   @media screen and (min-width: $tabletMin) {
     bottom: 95px;
   }
 }
 
-.book:hover .book-popup {
+.books:hover .book-popup {
   visibility: visible;
   opacity: 1;
   transform: translateY(0);
+}
+
+.flex-category {
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: $tabletMin) {
+    align-items: center;
+  }
+
+  @media screen and (min-width: $desktopMin) {
+    flex-direction: row;
+    align-items: flex-start;
+  }
 }
