--- a/src/sass/layouts/_shop-list.scss
+++ b/src/sass/layouts/_shop-list.scss
@@ -18,8 +18,6 @@ button {
 }
 
 .shop-list-container {
-	border: 2px solid green;
-
 	display: flex;
 	align-items: flex-start;
 	margin-top: 64px;
@@ -34,8 +32,6 @@ button {
 .side-bar {
 	display: none;
 
-	border: 2px solid rgb(41, 201, 229);
-
 	@media (min-width: 768px) {
 	}
 	@media (min-width: 1024px) {
@@ -48,8 +44,6 @@ button {
 }
 
 .shopping-list {
-	border: 2px solid rgb(221, 177, 55);
-
 	width: 100%;
 	@media (min-width: 768px) {
 	}
@@ -80,8 +74,8 @@ button {
 }
 
 .cart {
-	display: flex;
-	justify-content: center;
+	// display: flex;
+	// justify-content: center;
 	@media (min-width: 768px) {
 	}
 
@@ -123,7 +117,6 @@ button {
 	margin-left: auto;
 	margin-right: auto;
 
-	border: 2px solid tomato;
 	@media (min-width: 768px) {
 		max-width: 349px;
 	}
@@ -192,7 +185,6 @@ button {
 		object-fit: cover;
 
 		border-radius: 8px;
-		border: 1px solid red;
 		@media (min-width: 768px) {
 			min-width: 116px;
 			min-height: 165px;
@@ -329,6 +321,8 @@ button {
 		display: flex;
 		align-items: center;
 		gap: 8px;
+
+		filter: grayscale(1);
 		@media (min-width: 768px) {
 			gap: 16px;
 		}
