--- a/src/sass/layouts/modal/_about-book-modal.scss
+++ b/src/sass/layouts/modal/_about-book-modal.scss
@@ -1,5 +1,5 @@
 .about-book-modal {
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 400;
   position: relative;
