--- a/src/sass/layouts/modal/_about-book-modal.scss
+++ b/src/sass/layouts/modal/_about-book-modal.scss
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   position: relative;
-  top: 50%;
+  top: 430px;
   left: 50%;
   transform: translate(-50%, -50%);
   display: inline-block;
@@ -121,9 +121,9 @@
   .about-book-modal {
     display: flex;
     position: absolute;
+    top: 50%;
     padding: 40px;
     height: 500px;
-
     width: 579px;
   }
   .close-modal-btn {
