Connect styles to index.scss. Some fix

--- a/src/sass/layouts/_shop-list.scss
+++ b/src/sass/layouts/_shop-list.scss
@@ -20,7 +20,7 @@ button {
 .shop-list-container {
 	display: flex;
 	align-items: flex-start;
-	margin-top: 64px;
+	// margin-top: 64px;
 	padding-bottom: 40px;
 	@media (min-width: 768px) {
 		margin-top: 0;
