--- a/src/sass/layouts/_shop-list.scss
+++ b/src/sass/layouts/_shop-list.scss
@@ -30,18 +30,18 @@ button {
 	}
 }
 
-.side-bar {
+.shop-aside{
 	display: none;
-
-	@media (min-width: 768px) {
-	}
-	@media (min-width: 1024px) {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-		width: 356px;
-		height: 490px;
-	}
+	
+		@media (min-width: 768px) {}
+	
+		@media (min-width: 1024px) {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			width: 356px;
+			height: 490px;
+		}
 }
 
 .shopping-list {
